# portalpilot

./: .env.example  .gitignore  AGENTS.md  DEMO_EVIDENCE.md  PROMPTS.md  PortalPilot_PRD_v2.md  PortalPilot_PRD_v3.md  README.md  package.json  pnpm-lock.yaml
apps/api/: pyproject.toml
apps/api/app/: __init__.py  agent.py  browser_executor.py  computer_use.py  config.py  database.py  extraction.py  forms.py  guardrails.py  main.py  models.py  orchestrator.py  profiles.py  research.py  schemas.py  store.py  tasks.py  worker.py
apps/api/app/engine/: __init__.py  agent.py  executor.py  mapping.py  portal.py
apps/api/scripts/: apply_migrations.py  apply_seed.py  generate_db_types.py  set_task_status.py  smoke_browser.py  smoke_generality.py  smoke_openai.py  smoke_phase9.py  smoke_supabase.py
apps/api/tests/: conftest.py  test_agent.py  test_api.py  test_computer_use.py  test_executor.py  test_extraction.py  test_forms.py  test_guardrails.py  test_live_portal.py  test_mapping.py  test_research.py  test_task_walls.py  test_worker.py
apps/web/: package.json
apps/web/app/: api.ts  globals.css  health-panel.tsx  layout.tsx  workspace.tsx
apps/web/components/: actions-client.tsx  activity-client.tsx  dashboard-client.tsx  filing-detail-client.tsx  filings-board-client.tsx  profile-client.tsx  sidebar.tsx
docs/: EVIDENCE.md
supabase/migrations/: 20260606000000_generic_schema.sql  20260606010000_initial_portalpilot.sql  20260606020000_revoke_public_rls_auto_enable.sql  20260606030000_add_field_fill_metadata.sql
supabase/seed/: seed_bizfile_local_company.sql
(+16 files in other folders)
